--- a/style.css
+++ b/style.css
@@ -1,9 +1,25 @@
 body{
     font-family: 'Akaya Telivigala', cursive;
-
+    margin: 0%;
 }
 h1{
 font-size: 50px;
+
+
+}
+h2{
+
+    font-size: 40px;
+    
+}
+h3{
+   
+
+
+}
+p{
+
+color: dimgray;
 
 
 }
@@ -14,11 +30,74 @@ font-size: 50px;
 
     
     width:40%;
-    float: left;
+   float: left;
     margin-left: 5%;
 }
 .half-width img{
-
+    background-image: url(images/dot2.jpg);
+    background-repeat: no-repeat;
+   
+         
     width : 60%;
     height: 60%;
 }
+.top-banner{
+     
+    background-image: url(images/top-banner.png) ;
+    background-repeat: no-repeat;
+    
+}
+.dream-area{
+     
+    background-image: url(images/dream-bg.png) ;
+    background-repeat: no-repeat;
+    background-position: right ;
+    
+}
+.experience-area{
+
+background-image: url(images/exp-bg.png);
+background-repeat: no-repeat;
+    background-position: left ;
+    
+
+}
+section{
+
+    height: 500px;
+    padding-bottom:150px ;
+}
+.link-button{
+text-decoration: none;
+background-image: linear-gradient(45deg, lightSalmon,tomato);
+padding:  10px 20px;
+border-radius: 5px;
+color: cornsilk;
+
+font-weight: 700px;
+
+}
+.single-experience{
+box-shadow: 10px 10px 40px gray ;
+border-radius: 10px;
+height: 60%;
+background-color: white;
+
+
+}
+#full-stack{
+border-left: 7px solid ;
+border-image: linear-gradient(180deg,lightSalmon,tomato);
+border-image-slice: 1;
+
+}
+#baby-web{
+    border-left: 7px solid ;
+    border-image: linear-gradient(180deg,blue,cyan);
+    border-image-slice: 1;
+    }
+    footer p{
+
+ text-align:center ;
+
+    }
